--- a/frontend/src/components/Sakura/Sakura.module.css
+++ b/frontend/src/components/Sakura/Sakura.module.css
@@ -17,11 +17,16 @@
   background-size: contain;
   background-repeat: no-repeat;
   opacity: 0.7;
-  animation: fall linear infinite;
+  animation: fall 12s linear infinite; 
+    visibility: hidden;
 }
-
 @keyframes fall {
-  to {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+  }
+  100% {
     transform: translateY(100vh) rotate(360deg);
+    opacity: 0.2;
   }
 }
